Updated screenshot. Fix editor page title alignment. Site Logo styles.

--- a/stratford/sass/_extra-child-theme.scss
+++ b/stratford/sass/_extra-child-theme.scss
@@ -114,6 +114,9 @@ a {
 					text-decoration: none;
 				}
 			}
+			.site-logo {
+				margin-bottom: $spacing_horizontal;
+			}
 		}
 		.site-menu {
 			display: block;
