--- a/stratford/sass/style-child-theme-editor.scss
+++ b/stratford/sass/style-child-theme-editor.scss
@@ -90,7 +90,7 @@ $font_size_widget_title: #{map-deep-get($config-heading, "font", "size", "h3")};
 }
 
 .editor-post-title__block .editor-post-title__input {
-	text-align: center;
+	text-align: left;
 	color: $color_primary;
 }
 
