--- a/stratford/style-editor.css
+++ b/stratford/style-editor.css
@@ -897,7 +897,7 @@ p:not(.site-title) a:hover {
 }
 
 .editor-post-title__block .editor-post-title__input {
-	text-align: center;
+	text-align: left;
 	color: #2c313f;
 }
 
