--- a/stratford/style.css
+++ b/stratford/style.css
@@ -11,7 +11,7 @@ License: GNU General Public License v2 or later
 License URI: LICENSE
 Template: varia
 Text Domain: stratford
-Tags: one-column, flexible-header, accessibility-ready, custom-colors, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, rtl-language-support, sticky-post, threaded-comments, translation-ready
+Tags: one-column, fixed-header, accessibility-ready, custom-colors, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, rtl-language-support, sticky-post, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
@@ -3485,6 +3485,10 @@ p:not(.site-title) a:hover {
 	text-decoration: none;
 }
 
+#masthead .site-header-wrapper .site-branding .site-logo {
+	margin-bottom: 16px;
+}
+
 #masthead .site-header-wrapper .site-menu {
 	display: block;
 	-webkit-flex: 0 1 auto;
@@ -3784,4 +3788,16 @@ input[type="submit"].has-background:visited,
 .wp-block-verse {
 	font-family: "Inconsolata", monospace;
 	font-size: 1rem;
+}
+
+.home .entry-header {
+	display: none;
+}
+
+.home .entry-content {
+	margin-top: 0;
+}
+
+.home .site-main {
+	padding-top: 0;
 }
